8315960: Rename MethodSources; use Stream.toList; check value returned by file deletion